--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.apmem.tools:layouts:1.10@aar'
+    implementation 'com.google.android.material:material:1.0.0'
 }
