--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activitys.VideoActivity"
-            android:label="@string/VideoActivity_label"
+        <activity android:name=".Activitys.CatigorysActivity"
             android:parentActivityName=".Activitys.MainActivity"></activity>
+        <activity
+            android:name=".Activitys.VideoActivity"
+            android:label="@string/VideoActivity_label"
+            android:parentActivityName=".Activitys.MainActivity" />
         <activity android:name=".Activitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
