--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'org.apmem.tools:layouts:1.10@aar'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
 }
