--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.maxMustermannGeheim.linkcollection">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,8 +13,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activitys.MainActivity"
-            android:configChanges="orientation|screenSize">
+        <activity
+            android:name=".Activitys.Main.MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,12 +24,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Activitys.VideoActivity"
+            android:name=".Activitys.Videos.VideoActivity"
             android:label="@string/VideoActivity_label"
-            android:parentActivityName=".Activitys.MainActivity" />
+            android:parentActivityName=".Activitys.Main.MainActivity" />
         <activity
-            android:name=".Activitys.CatigorysActivity"
-            android:parentActivityName=".Activitys.MainActivity" />
+            android:name=".Activitys.Knowledge.KnowledgeActivity"
+            android:label="Wissen"
+            android:parentActivityName=".Activitys.Main.MainActivity" />
+        <activity
+            android:name=".Activitys.Videos.CatigorysActivity"
+            android:parentActivityName=".Activitys.Main.MainActivity" />
     </application>
 
 </manifest>
