--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
 }
