--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,4 +43,5 @@ dependencies {
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
+    implementation 'com.android.support:design:28.0.0'
 }
