--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.github.psinetron:slycalendarview:0.0.9'
+//    implementation 'com.github.kizitonwose:CalendarView:0.2.9'
+    implementation 'com.mikhaellopez:lazydatepicker:1.0.5'
 }
