--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    // FlowLayout
     implementation 'org.apmem.tools:layouts:1.10@aar'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
