--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.github.psinetron:slycalendarview:0.0.9'
 //    implementation 'com.github.kizitonwose:CalendarView:0.2.9'
     implementation 'com.mikhaellopez:lazydatepicker:1.0.5'
@@ -56,5 +56,5 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Eigene
-    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:0.1.0'
+    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:1.1.6'
 }
