--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 //    implementation 'com.github.kizitonwose:CalendarView:0.2.9'
     implementation 'com.mikhaellopez:lazydatepicker:1.0.5'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.maltaisn:calcdialog:2.1.0'
+
     // Crash
     implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
@@ -57,4 +59,5 @@ dependencies {
 
     // Eigene
     implementation 'com.github.FinnFlaschka1504:AndroidUtilities:1.1.6'
+    implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
 }
