--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.dialog_poster.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -35,8 +35,6 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     // FlowLayout
@@ -58,11 +56,12 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Eigene
-    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:1.2.4'
+    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:1.4.0'
 
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.10.1'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.8.5'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.5'
-    implementation 'org.assertj:assertj-core:3.14.0'
+
+
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+//    implementation 'com.squareup.picasso:picasso:2.71828'
 }
