--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 //    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:support-core-utils:28.0.0'
 }
