--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 //    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:support-core-utils:28.0.0'
+    implementation 'joda-time:joda-time:2.10.5'
 }
