--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,6 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:usesCleartextTraffic="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,15 +16,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="com.maxMustermannGeheim.linkcollection.fileprovider"
-            android:grantUriPermissions="true"
-            android:exported="false">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths" />
-        </provider>
         <activity android:name=".Activities.Main.MainActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme">
@@ -44,16 +33,22 @@
                 android:label="Video hinzufügen">
                 <action android:name="android.intent.action.SEND" />
                 <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
                 <data android:mimeType="text/*" />
-                <data android:mimeType="file/*" />
             </intent-filter>
         </activity>
         <activity android:name=".Activities.Content.ShowActivity"
             android:parentActivityName=".Activities.Main.MainActivity"/>
         <activity android:name=".Activities.Content.KnowledgeActivity"
             android:label="Wissen"
-            android:parentActivityName=".Activities.Main.MainActivity" />
+            android:parentActivityName=".Activities.Main.MainActivity">
+            <intent-filter
+                android:icon="@drawable/ic_knowledge"
+                android:label="Quelle hinzufügen">
+                <action android:name="android.intent.action.SEND" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:mimeType="text/*" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Activities.Content.OweActivity"
             android:label="Schulden"
             android:parentActivityName=".Activities.Main.MainActivity" />
