--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.1.0'
-    implementation 'androidx.navigation:navigation-ui:2.1.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.2.0'
+    implementation 'androidx.navigation:navigation-ui:2.2.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -66,4 +66,6 @@ dependencies {
 //    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:support-core-utils:28.0.0'
     implementation 'joda-time:joda-time:2.10.5'
+    implementation 'com.scottyab:aescrypt:0.0.1'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
 }
