Bugs behoben und Shortcut hinzugefüg (ausprobiert wie random Shortcut funktionieren könnte)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activities.Main.MainActivity"
+        <activity android:name=".Activities.Main.DialogActivity"
+            android:launchMode="singleTop"
+            android:noHistory="true"
+            android:theme="@style/DialogActivityTheme"/>
+        <activity
+            android:name=".Activities.Main.MainActivity"
             android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme">
             <intent-filter>
@@ -25,39 +31,50 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Content.VideoActivity"
+        <activity
+            android:name=".Activities.Content.VideoActivity"
             android:label="@string/VideoActivity_label"
             android:parentActivityName=".Activities.Main.MainActivity">
             <intent-filter
                 android:icon="@drawable/ic_videos"
                 android:label="Video hinzufügen">
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Content.ShowActivity"
-            android:parentActivityName=".Activities.Main.MainActivity"/>
-        <activity android:name=".Activities.Content.KnowledgeActivity"
+        <activity
+            android:name=".Activities.Content.ShowActivity"
+            android:parentActivityName=".Activities.Main.MainActivity" />
+        <activity
+            android:name=".Activities.Content.KnowledgeActivity"
             android:label="Wissen"
             android:parentActivityName=".Activities.Main.MainActivity">
             <intent-filter
                 android:icon="@drawable/ic_knowledge"
                 android:label="Quelle hinzufügen">
                 <action android:name="android.intent.action.SEND" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/*" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.Content.OweActivity"
+        <activity
+            android:name=".Activities.Content.OweActivity"
             android:label="Schulden"
             android:parentActivityName=".Activities.Main.MainActivity" />
-        <activity android:name=".Activities.Content.JokeActivity"
+        <activity
+            android:name=".Activities.Content.JokeActivity"
             android:label="Witze"
             android:parentActivityName=".Activities.Main.MainActivity" />
-        <activity android:name=".Activities.Main.CategoriesActivity"
+        <activity
+            android:name=".Activities.Main.CategoriesActivity"
             android:parentActivityName=".Activities.Main.MainActivity" />
-        <activity android:name=".Activities.Settings"
+        <activity
+            android:name=".Activities.Settings"
             android:label="Einstellungen"
             android:parentActivityName=".Activities.Main.MainActivity" />
     </application>
