--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity
             android:name=".Activities.Content.VideoActivity"
             android:label="@string/VideoActivity_label"
-            android:parentActivityName=".Activities.Main.MainActivity">
+            android:parentActivityName=".Activities.Main.MainActivity"
+            android:theme="@style/DialogActivityTheme">
             <intent-filter
                 android:icon="@drawable/ic_videos"
                 android:label="Video hinzufügen">
@@ -51,7 +52,8 @@
         <activity
             android:name=".Activities.Content.KnowledgeActivity"
             android:label="Wissen"
-            android:parentActivityName=".Activities.Main.MainActivity">
+            android:parentActivityName=".Activities.Main.MainActivity"
+            android:theme="@style/DialogActivityTheme">
             <intent-filter
                 android:icon="@drawable/ic_knowledge"
                 android:label="Quelle hinzufügen">
@@ -69,7 +71,8 @@
         <activity
             android:name=".Activities.Content.JokeActivity"
             android:label="Witze"
-            android:parentActivityName=".Activities.Main.MainActivity" />
+            android:parentActivityName=".Activities.Main.MainActivity"
+            android:theme="@style/DialogActivityTheme"/>
         <activity
             android:name=".Activities.Main.CategoriesActivity"
             android:parentActivityName=".Activities.Main.MainActivity" />
