--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Eigene
-    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:3.3.3'
+    implementation 'com.github.FinnFlaschka1504:AndroidUtilities:3.4.2'
 
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
 
@@ -65,6 +65,7 @@ dependencies {
     implementation 'joda-time:joda-time:2.10.5'
     implementation 'com.scottyab:aescrypt:0.0.1'
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
+    implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC2'
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
