--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.1'
     implementation 'com.pixplicity.sharp:library:1.1.0'
-    implementation 'com.github.stfalcon:StfalconPriceRangeBar:0.1.2'
+//    implementation 'com.github.stfalcon:StfalconPriceRangeBar:0.1.2'
+    implementation 'com.github.Innovattic:range-seek-bar:v1.0.6'
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
