--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.pixplicity.sharp:library:1.1.0'
 //    implementation 'com.github.stfalcon:StfalconPriceRangeBar:0.1.2'
     implementation 'com.github.Innovattic:range-seek-bar:v1.0.6'
+    implementation 'com.github.johndeverall:opengraph-java:2d69b89c1a'
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
