--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.0'
+    implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
@@ -49,7 +49,7 @@ dependencies {
 
     // Crash
     implementation 'com.google.firebase:firebase-crash:16.2.1'
-    implementation 'com.google.firebase:firebase-analytics:17.3.0'
+    implementation 'com.google.firebase:firebase-analytics:17.4.4'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     // Eigene
@@ -70,6 +70,7 @@ dependencies {
     implementation 'com.github.Innovattic:range-seek-bar:v1.0.6'
     implementation 'com.github.johndeverall:opengraph-java:2d69b89c1a'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
     implementation group: 'com.google.guava', name: 'guava', version: '28.2-android'
