--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -41,7 +41,7 @@ dependencies {
     implementation 'org.apmem.tools:layouts:1.10@aar'
     implementation 'com.github.sundeepk:compact-calendar-view:3.0.0'
     implementation 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0'
     implementation 'com.github.psinetron:slycalendarview:0.0.9'
     implementation 'com.mikhaellopez:lazydatepicker:1.0.5'
     implementation 'com.android.volley:volley:1.1.1'
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.github.FinnFlaschka1504:AndroidUtilities:3.5.9'
 
     implementation 'com.github.duanhong169:drawabletoolbox:1.0.7'
-
+    implementation "androidx.browser:browser:1.2.0"
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
