--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -23,7 +24,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoTitle"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activities.Content.MediaActivity"></activity>
+        <activity
+            android:name=".Activities.Content.MediaActivity"
+            android:parentActivityName=".Activities.Main.MainActivity"
+            android:theme="@style/AppTheme.NoTitle"/>
         <activity
             android:name=".Activities.Main.DialogActivity"
             android:launchMode="singleTop"
@@ -96,8 +100,8 @@
             android:parentActivityName=".Activities.Main.MainActivity"
             android:theme="@style/AppTheme.NoTitle" />
         <activity
-            android:name=".Utilities.ActivityResultListener"
-            android:label="Dubby"
+            android:name=".Utilities.ActivityResultHelper"
+            android:label="Dummy"
             android:theme="@style/DialogActivityTheme.NoTitle" />
 
         <provider
