--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
     implementation 'com.veinhorn.scrollgalleryview:picasso-loader:1.2.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bmelnychuk:atv:1.2.9'
+    implementation 'com.github.jakebonk:DraggableTreeView:1.0.1'
 
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
