--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.github.bmelnychuk:atv:1.2.9'
     implementation 'com.github.jakebonk:DraggableTreeView:1.0.1'
+    implementation 'com.quiph.ui:recyclerviewfastscroller:1.0.0'
 
 
     implementation group: 'org.apache-extras.beanshell', name: 'bsh', version: '2.0b6'
